--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,47 @@
 
-.section {
+html,body {
+    height: 100%;
+}
+
+body {
+    position: relative;
+}
+
+
+section {
     float: left;
-
 }
-
 .sidebar {
-    width: 30%;
-}
+    width: 20%;
 
+}
 .main-content {
-    width: 70%;
-}
+    width: 80%;
 
+}
 h2 {
     position: fixed;
     top: 0;
     left: 0;
 }
-
 .catalogue {
     position: absolute;
     bottom: 0;
-    top: 20px;
+    top: 50px;
+    overflow: auto;
+    width: inherit;
+    border: 1px solid #ccc;
+
+
 }
-body:after {
+
+.catalogue > ul > li {
+    list-style-type: none;
+
+}
+
+body::after {
     content: '';
-    clear: both;
     display: block;
+    clear: both;
 }
